# grpc_tensorflow_demo

./: README.md
freeze_optimize_quantize/: 0_graph_io.py  1_frozen_graph.sh  2_optimize_graph.sh  3_quantize_graph.sh  ckpt2pb.py  input_graph.pb  quantize_graph.pb  test_mnist_pb.py
helloword/: client.py  helloworld.proto  helloworld_pb2.py  helloworld_pb2_grpc.py  server.py
mnist_Django/: manage.py
mnist_Django/mnist_Django/: client.py  settings.py  urls.py  view.py  wsgi.py
mnist_cpp_http/mnist_crow_http_server/: CMakeLists.txt  client.py  main.cpp  mnist.cpp  mnist.h  server.cpp
mnist_cpp_http/mnist_libcurl_http_client/: CMakeLists.txt  CurlPost.cpp  CurlPost.hpp  FaceDetect.cpp  FaceDetect.hpp  main.cpp  main_base64.cpp  main_bytes.cpp
mnist_cpp_http/mnist_libcurl_http_client/include/md5/: md5.h
mnist_cpp_http/mnist_libcurl_http_client/libs/curl/: libcurl.so.4
mnist_flask/: client.py  curl.sh  server.py  start_server.sh
mnist_flask/webpage1/: client.py  curl.sh  gunicorn.conf.py  mnist  server.py
mnist_flask/webpage1/templates/: upload.html
mnist_flask/webpage2/: server.py
mnist_flask/webpage2/templates/: index.html
mnist_flask/webpage3/: client.py  server.py
mnist_flask/webpage3/templates/: index.html
mnist_flask_asynchronous/: client.py  gunicorn.conf.py  server.py  start_server.sh
mnist_libtorch/cpp/: CMakeLists.txt  mnist.pt  mnist_libtorch.cpp
mnist_libtorch/python/: mnist.pth  mnist_train_test.py
mnist_mnn/: CMakeLists.txt  mnist.cpp  to_mnn.sh
mnist_movidius_ncs/: convert_model.sh
mnist_movidius_ncs/cpp/: CMakeLists.txt  build.sh  mnist  mnist_ncs  mnist_ncs.cpp
mnist_movidius_ncs/python/: mnist_ncs.py
mnist_ncnn/: CMakeLists.txt  ckpt2pb.py  mnist.cpp  to_ncnn.sh
mnist_ncnn/ncnn/: mnist.param
mnist_onnx/: mnist.onnx  mnist_onnx.py  pytorch2onnx.py
mnist_openvino/: mnist.mapping  mnist.xml  to_openvino.sh
mnist_openvino/cpp/: CMakeLists.txt  mnist.cpp  mnist_async.cpp
mnist_openvino/python/: mnist.py  mnist_async.py
mnist_rabbitMQ/: client.py  server.py
mnist_tf/: client.py  mnist_pb2_grpc.py
mnist_tf/save/: checkpoint  mnist.ckpt.index
mnist_tfServing/: client.py  export_mnist.py
mnist_tfServing/mnist/0/: saved_model.pb
mnist_tfServing/mnist/0/variables/: variables.index
mnist_tf_interface/: client.py  mnist.proto  mnist_pb2.py  mnist_pb2_grpc.py  server.py
mnist_tf_network/: client.py  mnist.proto  mnist_pb2.py  server.py
mnist_tflite/: to_tflite.sh
mnist_tflite/cpp/: CMakeLists.txt  mnist_tflite.cpp
mnist_tflite/python/: mnist_tflite.py
mnist_tornado/: server.py
mnist_triton_inference_server/: convert2torchscript.py  mnist_lenet_model_cpu.pt  mnist_lenet_model_gpu.pt  run_bash.sh  tensorrtserver-1.12.0-py3-none-linux_x86_64.whl  triton_client.py  tritongrpcclient-1.12.0-py3-none-linux_x86_64.whl
mnist_triton_inference_server/mnist_lenet/: config.pbtxt
mnist_triton_inference_server/mnist_lenet/1/: model.pt
mnist_webpy/: client.py  curl.sh  image_base64  server.py
tensorflow-cpp-mnist/: CMakeLists.txt  MNIST_CPP.cpp  MNIST_CPP.h  main.cpp
test_rect/: server.py
test_rect/static/: group1-shard2of2  tensorflowjs_model.pb  weights_manifest.json
test_rect/static/css/: base.css
test_rect/static/js/: jquery-1.12.4.min.js  tfjs-converter.js
test_rect/templates/: index.html
train_test_mnist/: test_mnist.py  test_mnist_keras.py  train.txt  train_mnist.py  train_mnist_keras.py
